--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tsconfig/node16": "^16.1.0",
     "aws-cdk-lib": "2.84.0",
     "constructs": "10.1.156",
+    "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
     "sst": "^2.17.6",
     "typescript": "^5.1.5"
