--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "aws-sdk": "^2.1406.0",
+    "uuid": "^9.0.0"
+  }
 }
