--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "notes",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "sst dev",
-    "build": "sst build",
-    "deploy": "sst deploy",
-    "remove": "sst remove",
-    "console": "sst console",
-    "typecheck": "tsc --noEmit"
-  },
-  "devDependencies": {
-    "@tsconfig/node16": "^16.1.0",
-    "aws-cdk-lib": "2.84.0",
-    "constructs": "10.1.156",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
-    "sst": "^2.17.6",
-    "typescript": "^5.1.5"
-  },
-  "workspaces": [
-    "packages/*"
-  ],
-  "dependencies": {
-    "aws-sdk": "^2.1406.0",
-    "uuid": "^9.0.0"
-  }
+	"name": "notes",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "sst dev",
+		"build": "sst build",
+		"deploy": "sst deploy",
+		"remove": "sst remove",
+		"console": "sst console",
+		"typecheck": "tsc --noEmit",
+		"test": "sst bind vitest run"
+	},
+	"devDependencies": {
+		"@tsconfig/node16": "^16.1.0",
+		"aws-cdk-lib": "2.84.0",
+		"constructs": "10.1.156",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"sst": "^2.17.6",
+		"typescript": "^5.1.5"
+	},
+	"workspaces": [
+		"packages/*"
+	],
+	"dependencies": {
+		"aws-sdk": "^2.1406.0",
+		"uuid": "^9.0.0"
+	}
 }
