--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,9 +7,12 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.3.2",
     "@types/aws-lambda": "^8.10.119",
-    "vitest": "^0.32.2",
-    "sst": "^2.17.6"
+    "@types/node": "^20.3.2",
+    "sst": "^2.17.6",
+    "vitest": "^0.32.2"
+  },
+  "dependencies": {
+    "stripe": "^12.10.0"
   }
 }
